@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 01-08-2006 fixed: Cleaned up the action code + moved the special case built in function interception for the login window to its class.
+ - 01-08-2006 fixed: List and thumbcontrols cleared there page reference when cleared, meaning refreshed windows often caused jumping in the lists.
  - 01-08-2006 fixed: guibuilder.py, apparently xbmc.getLocalizedifong() isn't the same as xbmc.getLocalizedString() :)
  - 01-08-2006 added: guibuilder.py and example in GUI Builder.zip. This module allows you to skin your python scripts with a standard XBMC skinfile.xml.
  - 01-08-2006 fixed: on some dvd's, menu overlays appeared to soon, even after the last bugfix.
